[gd_scene load_steps=9 format=2]

[ext_resource path="res://Stats.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/StaticEnemy.gd" type="Script" id=2]

[sub_resource type="SphereShape" id=5]
radius = 0.5

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0, 0, 0, 1 )
roughness = 0.63
emission_enabled = true
emission = Color( 0, 0, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=6]
material = SubResource( 4 )
radius = 0.5
height = 1.0

[sub_resource type="Shader" id=7]
code = "shader_type spatial;

varying vec3 pos;

void vertex(){
	pos = VERTEX;
}

void fragment(){
	float r = sqrt(pos.x*pos.x + pos.z*pos.z);
	float a = step(0. ,sin(atan(r,pos.y)*20.+ TIME*20.));
	ALBEDO = vec3(a);
	ALPHA = a;
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )

[sub_resource type="SphereMesh" id=9]
material = SubResource( 8 )

[node name="StaticEnemy" type="KinematicBody"]
collision_layer = 4
script = ExtResource( 2 )

[node name="Area" type="Area" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 5 )

[node name="Stats" parent="." instance=ExtResource( 1 )]

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 5 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( -1, -8.74228e-08, 3.82137e-15, 0, -4.37114e-08, -1, 8.74228e-08, -1, 4.37114e-08, 0, 0, 0 )
mesh = SubResource( 6 )
material/0 = null

[node name="ShootFrom" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )

[node name="ShootFrom2" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )

[node name="ShootFrom3" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0 )

[node name="ShootFrom4" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0 )

[node name="sheild" type="MeshInstance" parent="."]
mesh = SubResource( 9 )
material/0 = null

[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
